Error handling and validations added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DynamicUiSample</string>
+    <string name="validation_msg">All fields are mandatory</string>
 </resources>
